--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "jwt-simple": "^0.5.5",
+    "mongoose": "^5.9.5",
+    "mongoose-unique-array": "^0.2.0",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
+    "socket.io": "^2.3.0"
+  },
+  "engines": {
+    "node": "10.0.0",
+    "npm": "5.1.0"
+  },
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC"
