--- a/server/client/package.json
+++ b/server/client/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "3.4.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "socket.io": "^2.0.3"
+    "socket.io-client": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
