--- a/server/client/package.json
+++ b/server/client/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^3.0.5",
     "react-router-bootstrap": "^0.23.3",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "redux": "^3.7.2",
