--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,7 @@
     "npm": "5.1.0"
   },
   "scripts": {
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "cd client && npm start",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC"
