--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,17 @@
     "axios": "^0.19.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "jwt-simple": "^0.5.5",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.9.5",
     "mongoose-unique-array": "^0.2.0",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "nodemon": "^1.18.9",
     "socket.io": "^2.3.0"
   },
